src/sass/components/_footer.scss
.footer {
  background-image: url('https://img.freepik.com/free-photo/clapperboard-popcorn_23-2147775681.jpg?w=826&t=st=1654543065~exp=1654543665~hmac=7b6efb0202ab45fe0a20c40bc37de608edbd12ca10b6d7bee761d8fa116081f4');
  background-repeat: repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;  
  .overlay{
    opacity: 1;
    background: linear-gradient(75deg,#000000e5, #000000d2);
  }

  .footer-content{
    padding: 5rem;
    display: grid;
    grid-auto-flow: row;
    align-items: center;
    justify-content: space-around;
    gap: 2rem;
    color: #fff;
    text-align: center;
    z-index: 1;
    @media #{$sm} {
      grid-auto-flow: column;
      grid-auto-columns: 1fr;
    }
    
  }
  .creator{
    margin: 2rem 0 .3rem;
    font-size: .8rem;
    text-align: center;
    color: #fff;
  }
  
  .column {
    display: flex;
    flex-direction: column;
  }
  h3 {color: $primary;}
  a {color: #fff;}

  .footer-form {
    display: flex; 
    margin-top: .5rem;
  }

  .bottom{
    z-index: 1;
  }
  .lang-selector{
    color: #fff;
    text-align: center;
    font-size: .8rem;
    #language{
      display: flex;
      width: 100%;
    }
  }
}

